Dark-mode theme final | Update

--- a/index.html
+++ b/index.html
@@ -30,40 +30,40 @@
         <div class="nav">
             Wordle Ado
         </div>
-        <span class = "btnight"><img src="night.png" alt="" srcset=""></span>
+        <img id="icon" class = "btnight" src="sun.png" alt="" srcset="">
     </div>
     
     <div data-guess-grid class="guess-grid">
-        <div class="tile"></div>
-        <div class="tile"></div>
-        <div class="tile"></div>
-        <div class="tile"></div>
-        <div class="tile"></div>
-        <div class="tile"></div>
-        <div class="tile"></div>
-        <div class="tile"></div>
-        <div class="tile"></div>
-        <div class="tile"></div>
-        <div class="tile"></div>
-        <div class="tile"></div>
-        <div class="tile"></div>
-        <div class="tile"></div>
-        <div class="tile"></div>
-        <div class="tile"></div>
-        <div class="tile"></div>
-        <div class="tile"></div>
-        <div class="tile"></div>
-        <div class="tile"></div>
-        <div class="tile"></div>
-        <div class="tile"></div>
-        <div class="tile"></div>
-        <div class="tile"></div>
-        <div class="tile"></div>
-        <div class="tile"></div>
-        <div class="tile"></div>
-        <div class="tile"></div>
-        <div class="tile"></div>
-        <div class="tile"></div>
+        <div class="tile" data-state="tbd"></div>
+        <div class="tile" data-state="tbd"></div>
+        <div class="tile" data-state="tbd"></div>
+        <div class="tile" data-state="tbd"></div>
+        <div class="tile" data-state="tbd"></div>
+        <div class="tile" data-state="tbd"></div>
+        <div class="tile" data-state="tbd"></div>
+        <div class="tile" data-state="tbd"></div>
+        <div class="tile" data-state="tbd"></div>
+        <div class="tile" data-state="tbd"></div>
+        <div class="tile" data-state="tbd"></div>
+        <div class="tile" data-state="tbd"></div>
+        <div class="tile" data-state="tbd"></div>
+        <div class="tile" data-state="tbd"></div>
+        <div class="tile" data-state="tbd"></div>
+        <div class="tile" data-state="tbd"></div>
+        <div class="tile" data-state="tbd"></div>
+        <div class="tile" data-state="tbd"></div>
+        <div class="tile" data-state="tbd"></div>
+        <div class="tile" data-state="tbd"></div>
+        <div class="tile" data-state="tbd"></div>
+        <div class="tile" data-state="tbd"></div>
+        <div class="tile" data-state="tbd"></div>
+        <div class="tile" data-state="tbd"></div>
+        <div class="tile" data-state="tbd"></div>
+        <div class="tile" data-state="tbd"></div>
+        <div class="tile" data-state="tbd"></div>
+        <div class="tile" data-state="tbd"></div>
+        <div class="tile" data-state="tbd"></div>
+        <div class="tile" data-state="tbd"></div>
         
     </div>
     <div data-keyboard class="keyboard">
